# msit

./: .gitignore  .gitmodules  OWNERS  README.md  README_EN.md  ms_performance_prechecker_env.sh
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
cluster_net_checker/: cluster_net_checker.ipynb
inference_tools/: .clang-format  CMakeLists.txt  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
inference_tools/msit/csrc/: CMakeLists.txt
inference_tools/msit/csrc/acl/core/: AclApi.cpp
inference_tools/msit/csrc/acl/include/: AclApi.h
inference_tools/msit/csrc/python/: PyACLActuator.cpp  PyACLActuator.h  PyLog.cpp  PyLog.h  PyMsitInterface.cpp
inference_tools/msit/csrc/utils/: log.cpp  log.h
modelevalstate/: build.sh  config.json  pyproject.toml  run_benchmark.sh  run_mindie.sh
modelevalstate/modelevalstate/: analysis.py  common.py
modelevalstate/modelevalstate/config/: config.py
modelevalstate/modelevalstate/data_feature/: dataset.py  dataset_with_modin.py  v1.py
modelevalstate/modelevalstate/inference/: common.py  constant.py  data_format_v1.py  dataset.py  file_reader.py  init.py  simulate.py  state_eval_v1.py  utils.py
modelevalstate/modelevalstate/model/: xgb_state_model.py
modelevalstate/modelevalstate/optimizer/: analyze.py  analyze_deepseek.py  config.py  global_best_custom.py  optimizer.py  server.py  store.py
modelevalstate/modelevalstate/patch/: __init__.py  patch_manager.py  plugin_manager_patch_2rc1.patch  plugin_simulate_patch_2rc1.py
modelevalstate/modelevalstate/tool/: compare_real_predict.py  convert_config.py  file_reader.py  rename_file.py  source_to_model_data.py
modelevalstate/modelevalstate/train/: predict_with_model.py  pretrain.py  source_to_train.py  state_param.py
modelevalstate/tests/data_feature/: test_v1.py
modelevalstate/tests/inference/: test_state_eval_v1.py
ms_performance_prechecker/: MANIFEST.in  README.md  a  ms_performance_prechecker_env.sh  pyproject.toml
msit/: OWNERS  README.md  README_EN.md  install.bat  install.sh  setup.py
msmodelslim/: README.md  pytest.ini  setup.py
msprechecker/: .lintrunner.toml  README.md  README_EN.md  pyproject.toml
msservice_advisor/: README.md  msservice_advisor.py  pyproject.toml  requestments.txt  setup.py
msserviceprofiler/: README.md
test/: run_ut.sh
(+1014 files in other folders)
